# geocrime-stl

./: .gitignore  README.md  download_historical_data.py  pyproject.toml  run_pipeline.py  test.ipynb  test_pipeline.py  verify_setup.py
.github/workflows/: release.yml
crime_data/: slmpd_baseline_2024_2026.parquet
data/: neighborhoods.geojson  stl_boundary_wgs84.geojson  stl_neighborhoods.geojson
notebooks/: demo.ipynb  hotspots.ipynb
src/geocrime_stl/: __init__.py  config.py  constants.py  data_cleaner.py  data_exporter.py  data_summary.py  data_viz.py  export.py  extract.py  extraction.py  pipeline.py  transform.py
src/geocrime_stl/data/: stl_boundary.geojson
src/geocrime_stl/etl/: transform.py
src/geocrime_stl/insights/: monthly_analysis.py  monthly_summary.py
src/geocrime_stl/utils/: export.py
