[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geocrime-stl"
version = "0.1.0"
description = "An ETL for fetching/cleaning St. Louis crime data sets."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "geopandas>=1.1.3",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "requests>=2.34.2"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
# Explicitly map the distribution name to your underscored package folder
packages = ["geocrime_stl"]

[tool.setuptools.package-data]
geocrime_stl = ["data/*.geojson"]