[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geocrime-stl"
version = "0.1.1"
description = "An ETL for fetching/cleaning St. Louis crime data sets."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "geopandas>=1.1.3",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "requests>=2.34.2"
]

# 2. Fixed package discovery to search recursively from the root folder
[tool.setuptools.packages.find]
where = ["."]
include = ["geocrime_stl*"]  # The asterisk (*) tells it to grab geocrime_stl AND all subfolders

[tool.setuptools.package-data]
geocrime_stl = ["data/*.geojson"]